crowdsec/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crowdsec
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`lapi.mandariini.uk`)
      kind: Rule
      services:
        - name: crowdsec-service
          namespace: crowdsec
          port: 8080
  tls:
    secretName: mandariini-uk-tls
